--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,6 @@ h1, h2, h3, h4, h5, h6 {
 
 /* 히어로 섹션 스타일 */
 .hero-section {
-    background-image: url('Rectangle 48.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -77,9 +73,33 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
 }
 
+.hero-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('Rectangle 48.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 0;
+}
+
+.hero-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
 .hero-section .container {
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 .hero-title {
